--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
 /* цвет фона героя и подвала #2F303A; */
 /* цвет фона кнопки и команды# F5F4FA; */
 /* цвет фона кнопки героя 188CE8; */
+/* цвет линии под карточкой портфолио #EEEEEE */
+/* цвет линии хейдера #ECECEC */
 :root {
   --primary-text-color: #757575;
   --title-text-color: #212121;
@@ -17,6 +19,8 @@
   --footer-bg-color: #2f303a;
   --logo-text-color: #000000;
   --button-bg-color: #188ce8;
+  --border-color: #eeeeee;
+  --border-header-color: #ececec;
 }
 *,
 *::before,
@@ -24,15 +28,19 @@
   box-sizing: inherit;
 }
 
-.container {
-  width: 1200px;
-}
-
 body {
   margin: 0;
   color: var(--primary-text-color);
   background-color: var(--primary-white-color);
   font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .list {
@@ -48,6 +56,7 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+/* header */
 .logo {
   color: var(--logo-text-color);
   font-family: 'Raleway';
@@ -63,12 +72,15 @@ p {
 }
 
 /* site nav */
-.page-header .container. {
+.container.nav > .site-nav,
+.container.nav {
   display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--border-header-color);
 }
-
 .site-nav {
   display: flex;
+  margin-left: 93px;
 }
 .site-nav .item {
   margin-right: 50px;
@@ -95,10 +107,9 @@ p {
   color: var(--accent-color);
 }
 
-/* contacts */
-
 .contacts {
   display: flex;
+  margin-left: auto;
 }
 
 .contacts .item + .item {
@@ -119,10 +130,13 @@ p {
 }
 
 /* hero */
+.hero .container,
+.hero.section {
+  background-color: var(--footer-bg-color);
+}
 .hero {
   padding: 200 0px;
 
-  background-color: var(--footer-bg-color);
   text-align: center;
 }
 .hero-title {
@@ -139,22 +153,56 @@ p {
 }
 
 /* section */
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 .section-title {
+  margin-bottom: 50px;
+
   color: var(--title-text-color);
+
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
+.feature.list,
+.work.list,
+.team.list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.feature .item {
+  width: 270px;
+  margin-right: 30px;
+}
+
+.work .item,
+.team .item {
+  margin-right: 30px;
+  padding-bottom: 94px;
+}
+
+.feature .item:last-child,
+.work .item:last-child,
+.team .item:last-child {
+  margin-right: 0px;
+}
+
 .feature .title {
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
+
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   letter-spacing: 0.03em;
-  margin-bottom: 10px;
 }
 
 .feature .text {
@@ -167,8 +215,13 @@ p {
 .team {
   background-color: var(--bg-color);
 }
+
 .team .title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -177,13 +230,16 @@ p {
 }
 
 .team .text {
+  padding-bottom: 30px;
+
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19px;
   letter-spacing: 0.03em;
 }
+
 /* address*/
-.footer {
+.footer .container {
   background-color: var(--footer-bg-color);
 }
 
@@ -197,10 +253,14 @@ p {
 }
 
 .footer .logo {
+  display: block;
   margin-bottom: 20px;
+  padding-top: 60px;
   color: var(--primary-white-color);
 }
-
+.address {
+  padding-bottom: 60px;
+}
 .address .link {
   color: var(--accent-white-color);
   text-decoration: none;
@@ -253,15 +313,50 @@ p {
 }
 
 /* portfolio */
-.project .title {
+
+.buttons.list {
+  display: flex;
+  justify-content: center;
+}
+
+.buttons .item {
+  margin-right: 8px;
+  margin-bottom: 50px;
+}
+
+.buttons .item:last-child {
+  margin-right: 0px;
+}
+.projects.list {
+  display: flex;
+  flex-wrap: wrap;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.projects .item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid var(--border-color);
+}
+.projects .item:nth-child(3n) {
+  margin-right: 0px;
+}
+.projects .item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+.projects .title {
+  margin-top: 20px;
   margin-bottom: 4px;
+
   color: var(--title-text-color);
+
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
 
-.project .text {
+.projects .text {
   color: var(--primary-text-color);
   font-family: 'Roboto';
   font-weight: 400;
@@ -270,6 +365,6 @@ p {
   letter-spacing: 0.03em;
 }
 
-.project .link {
+.projects .link {
   text-decoration: none;
 }
