--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ img {
 
   text-align: center;
 }
+
 .hero-title {
   margin-bottom: 30px;
   max-width: 696px;
@@ -150,6 +151,7 @@ img {
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
+  text-align: center;
   text-transform: uppercase;
 }
 
