--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,19 @@ p {
 img {
   display: block;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 /* header */
 .logo {
   color: var(--logo-text-color);
@@ -81,7 +94,6 @@ img {
 
 .nav-list {
   margin-left: 93px;
-  margin-right: 331px;
 }
 .site-nav {
   display: flex;
@@ -113,6 +125,7 @@ img {
 
 .contacts {
   display: flex;
+  margin-left: auto;
 }
 
 .contacts .item + .item {
@@ -134,7 +147,7 @@ img {
 
 /* hero */
 .hero {
-  padding: 200px;
+  padding: 200px 0;
 
   background-color: var(--footer-bg-color);
 
@@ -142,7 +155,7 @@ img {
 }
 
 .hero-title {
-  margin-bottom: 30px;
+  margin: 0 auto 30px;
   max-width: 696px;
 
   color: var(--primary-white-color);
@@ -185,6 +198,9 @@ img {
   margin-right: 30px;
 }
 
+.section.work {
+  padding-top: 0;
+}
 .work .item,
 .team .item {
   margin-right: 30px;
@@ -236,7 +252,7 @@ img {
 .team .text {
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.19px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
 }
 
@@ -265,6 +281,7 @@ img {
 }
 
 .address .link {
+  display: block;
   color: var(--accent-white-color);
   text-decoration: none;
 }
@@ -273,6 +290,11 @@ img {
 .address .link:focus {
   color: var(--accent-color);
 }
+.link.mail {
+  margin-top: 9px;
+  margin-bottom: 9px;
+}
+
 /* buttons */
 .btn {
   border-radius: 4px;
@@ -320,11 +342,11 @@ img {
 .buttons.list {
   display: flex;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .buttons .item {
   margin-right: 8px;
-  margin-bottom: 50px;
 }
 
 .buttons .item:last-child {
@@ -339,7 +361,6 @@ img {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  border-bottom: 1px solid var(--border-color);
 }
 .projects .item:nth-child(3n) {
   margin-right: 0px;
@@ -350,9 +371,12 @@ img {
 
 .project-title {
   padding: 20px 24px;
+  border-left: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
 }
 .projects .title {
-  margin-top: 20px;
+  margin-top: 0;
   margin-bottom: 4px;
 
   color: var(--title-text-color);
